--- a/notebooks/1.0-ajk-generate-transformed-dcm.ipynb
+++ b/notebooks/1.0-ajk-generate-transformed-dcm.ipynb
@@ -464,8 +464,8 @@
     }
    ],
    "source": [
-    "base_input_path = \"/home/akamath/Documents/deep-planner/data/raw/\"\n",
-    "base_output_path = \"/home/akamath/Documents/deep-planner/data/dcm/\"\n",
+    "base_input_path = \"/home/akamath/Documents/astra/data/raw/\"\n",
+    "base_output_path = \"/home/akamath/Documents/astra/data/dcm/\"\n",
     "os.makedirs(base_output_path, exist_ok=True)\n",
     "\n",
     "n_subjects = 3\n",
@@ -521,7 +521,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('kbp')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -535,12 +535,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a9557c1a0f6421da2ca83a68d63b4945f3d7137f53633c188e4ddc12fa98e984"
+    "hash": "5305b6773aa26fa3cd82a1b7d912ed4c445c10a0e6a35c857b539796e1f3603b"
    }
   }
  },
